# Sylo

./: .gitignore  .~lock._lalr1.csv#  Cargo.toml  README.md  _graph.dot  _lalr1.csv  build.rs  dot.sh  lexer.c.txt  lexer.rs
algo/: byte_tree.py  tmp.gv  unicode.py
examples/: arithmetic.rs  arithmetic.slang  arithmetic_parser.rs  bindings.rs  bindings.rs.txt  lalr1.rs  lr0.rs  lr1.rs  meta.grammar  parse.rs  regex.rs  scan.rs  scanner.rs  simple.rs
src/: ast.rs  ast_utils.rs  bnf.rs  iter.rs  lexer.rs  lib.rs  macros.rs  meta.lalrpop  parser.rs  repr.rs  tests.rs  tok.rs
src/_c/: lexer.c  lexer.h
src/cfg/: first.rs  mod.rs
src/cfg/lr1/: builder.rs  mod.rs
src/codegen/: c.rs  rep.rs
src/collections/: free_list.rs  mod.rs
src/compile/: c_render.rs  mod.rs
src/compile/templates/: lexer1.c.tt
src/cst/: arena.rs  mod.rs
src/debug/: mod.rs  string_builder.rs
src/lang/: c_render.rs  lexer.rs  macros.rs  mod.rs  parser.rs  tests.rs  vocabulary.rs
src/lang/cfg/: first.rs  follow.rs  grammar.rs  mod.rs  tests.rs
src/lang/dfa/: mod.rs  tests.rs
src/lang/lex/: compile.rs  (+6 more)
src/langcore/: mod.rs
src/lex/: compile.rs  mod.rs  parse.rs  tests.rs
src/parser/: mod.rs
src/parsing/: lexer.rs  macros.rs  mod.rs  parser.rs  re.rs  tests.rs
src/re/: mod.rs  unicode.rs
src/syn/: compile.rs  mod.rs  parse.rs  parse_tree.rs  tests.rs
src/syntax/: lexer.rs  macros.rs  mod.rs  parser.rs  tests.rs  vocabulary.rs
src/templates/: lexer0.c.tt  lexer1.c.tt
src/utils/: indent_writer.rs  iter.rs  mod.rs  string_builder.rs  tarjan.rs  transitive_closure.rs
(+118 files in other folders)
