[package]
name = "sylo"
version = "0.1.0"
authors = ["Sam C <sc14809@my.bristol.ac.uk>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = false

#[dependencies.tera]
#version = "1"
#default-features = false # Turn off tera's dependencies